--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 @font-face {
     font-family: "nunitosans", sans-serif;
@@ -106,11 +107,15 @@ ul {
 }
 .menu {
     background-color: rgb(17 115 240);
-    margin:2px;
-    border: double 4px rgb(0, 0, 0);
-    padding:4px;
+    margin:5px;
+    border: double 3px rgb(0, 0, 0);
+    padding:3%;
     color:rgb(255, 255, 255);
     text-decoration-line: none;
+}
+.menu:hover{
+    background-color: rgba(0, 0, 0, 0.74);
+    transition: 1s;
 }
 .imgIndex1{
     padding: 0 3% 1% 3%;
@@ -119,7 +124,7 @@ ul {
 
 /* Main general */
 .fondoCeleste {
-    background-color: rgb(233, 254, 255);
+    background:linear-gradient(to right, #ccffff 0%, #99ccff 100%);
     padding: 10px 0px;
     height: 100%;
 }
@@ -295,12 +300,11 @@ ul {
     font-weight: bold;
     color:rgb(0 163 232)
 }
-.IconFooter{ /*REVISAR TAMAÑOOOO*/
-    width: 30px;
+.IconFooter{
+    width: 2rem;
     padding-top: 3px;
     padding-right: 3px;
     padding-left: 3px;
-    padding-bottom: 1px;
 }
 
 
@@ -514,5 +518,5 @@ ul {
     .IconFooter{
         width: 25px;
     }
-
 }
+/* ANIMACIONES*/
