--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,10 @@ ul {
     width: 95%;
     height: 95%;
 }
+.imgServicios:hover{
+    opacity: 0.6;
+    transition:0.5s;
+}
 .imgSectionNosotros{ /*Sirve para img y texto*/
     width: 50%;
     margin: 0 2%;
