--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,7 @@ ul {
     align-items: flex-start;
     background-color:rgb(17 115 240);
     width: 100%;
+    margin-bottom: 0.5%;
 }
 .flexHeaderNav{
     display: flex;
@@ -111,9 +112,9 @@ ul {
 }
 .menu {
     background-color: rgb(17 115 240);
-    margin: 1% 10%;
-    border: double 3px rgb(0, 0, 0);
-    padding: 1% 3%;
+    margin: 12%;
+    border: double 4px rgb(0, 0, 0);
+    padding: 2% 3%;
     color:rgb(255, 255, 255);
     text-decoration-line: none;
 }
