--- a/css/style.css
+++ b/css/style.css
@@ -18,110 +18,15 @@ ul {
 }
 
 /*caracteristicas generales*/
-
-.alineacionTextoDerecha{
-    text-align: right;
-}
-.imgMargin{
-    padding: 0 3% 1% 3%;
-    width: 95vw;
-}
-.imgMarginLeft{
-    margin-top: 5px;
-    margin-right: 5px;
-    margin-bottom: 5px;
-    margin-left: 15px;
-}
-.textoMargin{
-    margin: 1% 5%;
-    text-align: left;
-}
-.textoMarginRight{
-    margin-top: 5px;
-    margin-right: 15px;
-    margin-bottom: 5px;
-    margin-left: 5px;
-}
-.imgMainIndex{
-    width: 80%;
-    height: auto;
-}
-
 .iframeSize{
     width: 120%;
     height: 100%;
-}
-.imgServicios{
-    width: 95%;
-    height: 95%;
-}
-.imgServicios:hover{
-    opacity: 0.6;
-    transition:0.5s;
-}
-.imgSectionNosotros{ /*Sirve para img y texto*/
-    width: 50%;
-    margin: 0 2%;
-}
-.imgChapa1{
-    width: 80vw;
-    height: 48vh;
-    margin: 0 5%;
-}
-.textoTamaño{
-    width: 50%;
-    height: 50%;
-    padding-left: 5%;
 }
 .fuenteGrande {
     font-size: 130%;
 }
 
 /*Header general*/
-
-/*
-.flexHeader{
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-    justify-content:center;
-    width:100%;
-    position: absolute;
-}
-.flexHeaderImg{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    background-color:rgb(17 115 240);
-    width: 100%;
-    margin-bottom: 0.5%;
-}
-.flexHeaderNav{
-    display: flex;
-    justify-content:center;
-    width: 80%;
-    text-transform: uppercase;
-    font-weight: bold;
-}
-.flexHeaderDiv{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-
-.menu {
-    background-color: rgb(17 115 240);
-    margin: 12%;
-    border: double 4px rgb(0, 0, 0);
-    padding: 2% 3%;
-    color:rgb(255, 255, 255);
-    text-decoration-line: none;
-}
-.menu:hover{
-    background-color: rgba(0, 0, 0, 0.74);
-    transition: 1s;
-}
-*/
 .fondoHeader{
     background-color: rgb( 33 37 41);
 }
@@ -145,128 +50,51 @@ ul {
 .color{
     color: rgb( 33 37 41);
 }
-/* 1) main index.html*/
 
-.sectionMainIndex{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 1%;
-}
-.flexArticleIndex{
-    display:flex;
-    flex-direction: row;
-    justify-content:center;
-    margin: 3% 0;
-}
-.flexArticleImgIndex{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 40%;
-}
-.flexArticleTextoIndex{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 30%;
+/* 1) main index.html*/
+.imgMainIndex{
+    width:58%;
 }
 
 /*2) main nosotros.html*/
-
-.flexSectionNosotros{
-    display:flex;
-    flex-direction: column;
-    justify-content: center;
-    margin:0 5%;
+.imgMainNosotros{
+    width:50%;
 }
-.flexSectionNosotros2{
-    display:flex;
-    flex-direction: row;
-    justify-content: space-between ;
-    align-items: center;
-    margin:2% 3%;
-}
-
-/*3) main servicios.html*/
-
-.flexServiciosH2{ /*Uso en títulos H2 H3 en general*/
-    display: flex;
-    justify-content: flex-start;
-    margin-left: 5%;
-}
-.flexMainServicios{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    width: 100%;
-}
-.flexMainServicios2{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    padding: 0 3% 3% 3%;
+.containerSizeNos{
+    width: 80%;
 }
 
 /*3.1) main chapaypintura.html*/
-
-.flexMainChapa{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding:3% 3% 2% 3%;
+.imgChapa1{
+    width: 80vw;
 }
-.flexMainChapa2{ /* flexMainChapa2 y 3 lo usé también para Desabollado y Lustre*/
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+.imgServicios{
+    opacity: 1;
+    width: 60%;
 }
-.flexMainChapa3{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 3% 3% 3%;
+.imgServicios:hover{
+    opacity: 0.6;
+    transition:0.5s;
+}
+.fuenteBold{
+    font-weight: bold;
+    color:rgb(1, 102, 146)
 }
 
 /*3.2) main desabollado-html*/
-
-.flexMainDesabollado{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    margin: 2% 5% 5% 5%;
+.imgMainDesabollado{
+    width: 180%;
 }
 
-/*3.3) main lustre.html*/
+/*3.3) main lustre.html (SOLO USÉ imgServicios*/
 
-.flexMainLustre{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 1% 5%;
-}
-.flexMainLustre2{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    padding: 1% 5% 4% 5%;
-}
 
 /*4) main trabajos.html*/
-.flexMainTrabajos{
-    display: flex;
-    justify-content:center;
-    padding: 1%;
+.imgTrabajos{
+    width: 100%;
 }
 
 /*5) main contacto.html*/
-
 .flexMainContacto{
     display: flex;
     flex-direction: row;
@@ -288,52 +116,11 @@ ul {
 }
 
 /* Footer general*/
-
 .colorFooter{
     color:#0d6efd;
 }
-/*
-.flexFooter{
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    width: 100%;
-    background-color: rgb(0 0 0);
-}
-.flexDivFooter1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.flexDivFooter2{
-    display: flex;
-    flex-direction: row;
-    justify-content:center;
-    align-self: center;
-}
-.bordeImgFooter {
-    border: double 3px rgb(255, 255, 255);
-    margin: 3%;
-}
-.fuenteFooter {
-    font-weight: bold;
-    color:rgb(0 163 232)
-}
-.iconFooter{
-    width: 2rem;
-    padding-top: 3px;
-    padding-right: 3px;
-    padding-left: 3px;
-}
-.iconFooter:hover{
-    opacity: 0.5;
-    transition: 0.5s;
-}
-*/
-
 
 /*Grids*/
-
 #gridHeader{
     grid-area: header;
 }
@@ -362,37 +149,15 @@ ul {
     body{
         width: 98.8%;
     }
+    .h3{
+        font-size: 130%;
+    }
+    .h4{
+        font-size: 125%;
+    }
     #gridAreas{
     grid-template-columns: 101.2%;
     grid-template-rows: 1fr auto 1fr;
-    }
-    .fondoCeleste {
-        background-color: rgb(233, 254, 255);
-        height: 100%;
-    }
-    .imgMargin{
-        padding: 0 3%;
-        width: 85vw;
-    }
-    .flexArticleIndex{
-        flex-direction: column;
-        justify-content:center;
-        align-items: center;
-        padding: 3%;
-    }
-    .flexArticleImgIndex{
-        flex-direction: row;
-        justify-content: center;
-        width: 90%;
-    }
-    .flexArticleTextoIndex{
-        flex-direction: row;
-        justify-content: center;
-        width: 100%;
-    }
-    .textoMarginRight{
-        text-align: center;
-        margin: 3%;
     }
 
     /*main nosotros*/
@@ -400,43 +165,27 @@ ul {
         width: 45%;
         padding: 4% 2%;
     }
+
     /*main chapaypintura*/
     .imgChapa1{
         width: 80%;
         height: 40%;
     }
-    .flexMainChapa2{ /* flexMainChapa2 y 3 lo usé también para Desabollado y Lustre*/
-        flex-direction: column;
-        justify-content: center;
-    }
-    
+
     /*main contacto*/
     .flexMainContacto{
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-    }
-    .textoMargin{
-        text-align: center;
-    }
-
-    /*footer*/
-    .flexFooter{
-        flex-direction: row;
-        justify-content: space-around;
-        font-size: 75%;
-    }
-    .IconFooter{
-        width: 25px;
-    }
+    } 
     .placeholderPosition{
-        transform: translateX(2.3rem);
+        transform: translateX(4.7rem);
     }
     .placeholderPosition2{
-        transform: translateX(2.5rem);
+        transform: translateX(5rem);
     }
-
 }
+
+
 /*------MEDIA: Smartphone------*/
 
 @media (max-width: 480px){
@@ -450,42 +199,15 @@ ul {
         }
     li a {
         font-size: 80%;
-    }        
-    .fondoMenu {
-        margin:4%;
-        border: solid 1px rgb(0, 0, 0);
-        padding: 1%;
     }
-    
-    .flexArticleIndex{
-        flex-direction: column;
-        justify-content:center;
-        align-items: center;
-        padding: 3%;
+    .h3{
+        font-size: 150%;
     }
-    .flexArticleImgIndex{
-        flex-direction: column;
-        justify-content: center;
-        width: 90%;
-    }
-    .flexArticleTextoIndex{
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-    }
-    .textoMarginRight{
-        text-align: center;
-        margin: 3%;
-    }
-    /*main nosotros*/
-    .flexSectionNosotros2{
-        flex-direction: column;
+    .h4{
+        font-size: 135%;
     }
     .imgSectionNosotros{
         padding: 3% 2%;
-    }
-    .textoMargin{
-        text-align: center;
     }
 
     /*main servicios*/
@@ -493,62 +215,22 @@ ul {
         width: 320px;
         height: 210px;
     }
-    .flexMainServicios{
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
 
     /*main chapaypintura*/
     .imgChapa1{
         width: 80%;
         height: 40%;
     }
-    .flexMainChapa2{ /* flexMainChapa2 y 3 lo usé también para Desabollado y Lustre*/
-        flex-direction: column;
-        justify-content: center;
-    }
 
-    /*main desabollado*/
-    .flexMainDesabollado{
-        flex-direction: column;
-        justify-content:center;
-        margin: 0;
-    }
-    .imgSectionNosotros{
-        width: 90%;
-        margin: 0 2%;
-    }
-    .textoMargin{
-        text-align: center;
-    }
-    .textoTamaño{
-        width: 90%;
-        height: 50%;
-        padding-left:1%;
-    }
-    
     /*main contacto*/
     .flexMainContacto{
         flex-direction: column;
         align-items: center;
-    }
-
-    /*footer*/
-    .flexFooter{
-        flex-direction: column;
-        justify-content: center;
-        align-content: center;
-        width: 100%;
-        padding-bottom: 2%;
-    }
-    .IconFooter{
-        width: 25px;
-    }
+    }    
     .placeholderPosition{
-        transform: translateX(1.7rem);
+        transform: translateX(3.1rem);
     }
     .placeholderPosition2{
-        transform: translateX(1.7rem);
+        transform: translateX(3.3rem);
     }
 }
